PROJECT(softfloat)

include(FetchContent)
FetchContent_Declare(softfloat_srcs
	GIT_REPOSITORY https://github.com/ucb-bar/berkeley-softfloat-3.git
	GIT_TAG master
)
if(NOT softfloat_srcs_POPULATED)
	FetchContent_Populate(softfloat_srcs)
	file(COPY ${softfloat_srcs_SOURCE_DIR}/source/include/softfloat.h DESTINATION ${softfloat_srcs_SOURCE_DIR})
	file(RENAME ${softfloat_srcs_SOURCE_DIR}/softfloat.h ${softfloat_srcs_SOURCE_DIR}/softfloat_orig.h )
	FetchContent_GetProperties(softfloat_srcs)
	set(EXTERNAL_INSTALL_LOCATION ${softfloat_srcs_SOURCE_DIR})

CMAKE_HOST_SYSTEM_INFORMATION(RESULT HOSTINFO QUERY
	OS_PLATFORM	#0
	IS_64BIT	#1
	HAS_SSE2	#2
)

LIST(GET HOSTINFO 0 HI_OS_PLATFORM)
LIST(GET HOSTINFO 1 HIF_64BIT)
LIST(GET HOSTINFO 2 HIF_SSE2)

IF(WIN32)
	IF(NOT ${HIF_64BIT})
		IF(${HIF_SSE2})
			SET(PLATFORM_N Win32-SSE2-MinGW)
		ELSE()
			SET(PLATFORM_N Win32-MinGW)
		ENDIF()
	ELSE()
		SET(PLATFORM_N Win64-MinGW-w64)
		FILE(READ ${EXTERNAL_INSTALL_LOCATION}/build/${PLATFORM_N}/platform.h PLATFORMSTR)
		STRING(REPLACE "#define SOFTFLOAT_INTRINSIC_INT128 1" "" PLATFORMSTR ${PLATFORMSTR})
		STRING(REPLACE "#define SOFTFLOAT_BUILTIN_CLZ 1" "" PLATFORMSTR ${PLATFORMSTR})
		FILE(WRITE ${EXTERNAL_INSTALL_LOCATION}/build/${PLATFORM_N}/platform.h ${PLATFORMSTR})
	ENDIF()
ELSE() #Unix/Linux assumed
	IF(NOT ${HI_OS_PLATFORM} STREQUAL "x86_64")
		MESSAGE(FATAL_ERROR "Linux-Host CPU platforms other than 'x86_64' not supported." )
	ENDIF()
	SET (PLATFORM_N Linux-${HI_OS_PLATFORM}-GCC)
ENDIF()

SET(SPECIALIZE RISCV CACHE STRING "SoftFloat specialize for RISC-V target (default)")

##################### SOFTFLOAT UTILITY PROJECT (berkeley softfloat) #####################

SET(INC source/include)

SET(SOFTFLOAT_OPTS
	SOFTFLOAT_ROUND_ODD
	INLINE_LEVEL=5
	SOFTFLOAT_FAST_DIV32TO16
	SOFTFLOAT_FAST_DIV64TO32
)

SET(SRCS_PRIMITIVES
	${EXTERNAL_INSTALL_LOCATION}/source/s_eq128.c
	${EXTERNAL_INSTALL_LOCATION}/source/s_le128.c
	${EXTERNAL_INSTALL_LOCATION}/source/s_lt128.c
	${EXTERNAL_INSTALL_LOCATION}/source/s_shortShiftLeft128.c
	${EXTERNAL_INSTALL_LOCATION}/source/s_shortShiftRight128.c
	${EXTERNAL_INSTALL_LOCATION}/source/s_shortShiftRightJam64.c
	${EXTERNAL_INSTALL_LOCATION}/source/s_shortShiftRightJam64Extra.c
	${EXTERNAL_INSTALL_LOCATION}/source/s_shortShiftRightJam128.c
	${EXTERNAL_INSTALL_LOCATION}/source/s_shortShiftRightJam128Extra.c
	${EXTERNAL_INSTALL_LOCATION}/source/s_shiftRightJam32.c
	${EXTERNAL_INSTALL_LOCATION}/source/s_shiftRightJam64.c
	${EXTERNAL_INSTALL_LOCATION}/source/s_shiftRightJam64Extra.c
	${EXTERNAL_INSTALL_LOCATION}/source/s_shiftRightJam128.c
	${EXTERNAL_INSTALL_LOCATION}/source/s_shiftRightJam128Extra.c
	${EXTERNAL_INSTALL_LOCATION}/source/s_shiftRightJam256M.c
	${EXTERNAL_INSTALL_LOCATION}/source/s_countLeadingZeros8.c
	${EXTERNAL_INSTALL_LOCATION}/source/s_countLeadingZeros16.c
	${EXTERNAL_INSTALL_LOCATION}/source/s_countLeadingZeros32.c
	${EXTERNAL_INSTALL_LOCATION}/source/s_countLeadingZeros64.c
	${EXTERNAL_INSTALL_LOCATION}/source/s_add128.c
	${EXTERNAL_INSTALL_LOCATION}/source/s_add256M.c
	${EXTERNAL_INSTALL_LOCATION}/source/s_sub128.c
	${EXTERNAL_INSTALL_LOCATION}/source/s_sub256M.c
	${EXTERNAL_INSTALL_LOCATION}/source/s_mul64ByShifted32To128.c
	${EXTERNAL_INSTALL_LOCATION}/source/s_mul64To128.c
	${EXTERNAL_INSTALL_LOCATION}/source/s_mul128By32.c
	${EXTERNAL_INSTALL_LOCATION}/source/s_mul128To256M.c
	${EXTERNAL_INSTALL_LOCATION}/source/s_approxRecip_1Ks.c
	${EXTERNAL_INSTALL_LOCATION}/source/s_approxRecip32_1.c
	${EXTERNAL_INSTALL_LOCATION}/source/s_approxRecipSqrt_1Ks.c
	${EXTERNAL_INSTALL_LOCATION}/source/s_approxRecipSqrt32_1.c
)

SET(SRCS_SPECIALIZE
	${EXTERNAL_INSTALL_LOCATION}/source/${SPECIALIZE}/softfloat_raiseFlags.c
	${EXTERNAL_INSTALL_LOCATION}/source/${SPECIALIZE}/s_f16UIToCommonNaN.c
	${EXTERNAL_INSTALL_LOCATION}/source/${SPECIALIZE}/s_commonNaNToF16UI.c
	${EXTERNAL_INSTALL_LOCATION}/source/${SPECIALIZE}/s_propagateNaNF16UI.c
	${EXTERNAL_INSTALL_LOCATION}/source/${SPECIALIZE}/s_f32UIToCommonNaN.c
	${EXTERNAL_INSTALL_LOCATION}/source/${SPECIALIZE}/s_commonNaNToF32UI.c
	${EXTERNAL_INSTALL_LOCATION}/source/${SPECIALIZE}/s_propagateNaNF32UI.c
	${EXTERNAL_INSTALL_LOCATION}/source/${SPECIALIZE}/s_f64UIToCommonNaN.c
	${EXTERNAL_INSTALL_LOCATION}/source/${SPECIALIZE}/s_commonNaNToF64UI.c
	${EXTERNAL_INSTALL_LOCATION}/source/${SPECIALIZE}/s_propagateNaNF64UI.c
	${EXTERNAL_INSTALL_LOCATION}/source/${SPECIALIZE}/extF80M_isSignalingNaN.c
	${EXTERNAL_INSTALL_LOCATION}/source/${SPECIALIZE}/s_extF80UIToCommonNaN.c
	${EXTERNAL_INSTALL_LOCATION}/source/${SPECIALIZE}/s_commonNaNToExtF80UI.c
	${EXTERNAL_INSTALL_LOCATION}/source/${SPECIALIZE}/s_propagateNaNExtF80UI.c
	${EXTERNAL_INSTALL_LOCATION}/source/${SPECIALIZE}/f128M_isSignalingNaN.c
	${EXTERNAL_INSTALL_LOCATION}/source/${SPECIALIZE}/s_f128UIToCommonNaN.c
	${EXTERNAL_INSTALL_LOCATION}/source/${SPECIALIZE}/s_commonNaNToF128UI.c
	${EXTERNAL_INSTALL_LOCATION}/source/${SPECIALIZE}/s_propagateNaNF128UI.c
)

SET(SRCS_OTHERS
	${EXTERNAL_INSTALL_LOCATION}/source/s_roundToUI32.c
	${EXTERNAL_INSTALL_LOCATION}/source/s_roundToUI64.c
	${EXTERNAL_INSTALL_LOCATION}/source/s_roundToI32.c
	${EXTERNAL_INSTALL_LOCATION}/source/s_roundToI64.c
	${EXTERNAL_INSTALL_LOCATION}/source/s_normSubnormalF16Sig.c
	${EXTERNAL_INSTALL_LOCATION}/source/s_roundPackToF16.c
	${EXTERNAL_INSTALL_LOCATION}/source/s_normRoundPackToF16.c
	${EXTERNAL_INSTALL_LOCATION}/source/s_addMagsF16.c
	${EXTERNAL_INSTALL_LOCATION}/source/s_subMagsF16.c
	${EXTERNAL_INSTALL_LOCATION}/source/s_mulAddF16.c
	${EXTERNAL_INSTALL_LOCATION}/source/s_normSubnormalF32Sig.c
	${EXTERNAL_INSTALL_LOCATION}/source/s_roundPackToF32.c
	${EXTERNAL_INSTALL_LOCATION}/source/s_normRoundPackToF32.c
	${EXTERNAL_INSTALL_LOCATION}/source/s_addMagsF32.c
	${EXTERNAL_INSTALL_LOCATION}/source/s_subMagsF32.c
	${EXTERNAL_INSTALL_LOCATION}/source/s_mulAddF32.c
	${EXTERNAL_INSTALL_LOCATION}/source/s_normSubnormalF64Sig.c
	${EXTERNAL_INSTALL_LOCATION}/source/s_roundPackToF64.c
	${EXTERNAL_INSTALL_LOCATION}/source/s_normRoundPackToF64.c
	${EXTERNAL_INSTALL_LOCATION}/source/s_addMagsF64.c
	${EXTERNAL_INSTALL_LOCATION}/source/s_subMagsF64.c
	${EXTERNAL_INSTALL_LOCATION}/source/s_mulAddF64.c
	${EXTERNAL_INSTALL_LOCATION}/source/s_normSubnormalExtF80Sig.c
	${EXTERNAL_INSTALL_LOCATION}/source/s_roundPackToExtF80.c
	${EXTERNAL_INSTALL_LOCATION}/source/s_normRoundPackToExtF80.c
	${EXTERNAL_INSTALL_LOCATION}/source/s_addMagsExtF80.c
	${EXTERNAL_INSTALL_LOCATION}/source/s_subMagsExtF80.c
	${EXTERNAL_INSTALL_LOCATION}/source/s_normSubnormalF128Sig.c
	${EXTERNAL_INSTALL_LOCATION}/source/s_roundPackToF128.c
	${EXTERNAL_INSTALL_LOCATION}/source/s_normRoundPackToF128.c
	${EXTERNAL_INSTALL_LOCATION}/source/s_addMagsF128.c
	${EXTERNAL_INSTALL_LOCATION}/source/s_subMagsF128.c
	${EXTERNAL_INSTALL_LOCATION}/source/s_mulAddF128.c
	${EXTERNAL_INSTALL_LOCATION}/source/softfloat_state.c
	${EXTERNAL_INSTALL_LOCATION}/source/ui32_to_f16.c
	${EXTERNAL_INSTALL_LOCATION}/source/ui32_to_f32.c
	${EXTERNAL_INSTALL_LOCATION}/source/ui32_to_f64.c
	${EXTERNAL_INSTALL_LOCATION}/source/ui32_to_extF80.c
	${EXTERNAL_INSTALL_LOCATION}/source/ui32_to_extF80M.c
	${EXTERNAL_INSTALL_LOCATION}/source/ui32_to_f128.c
	${EXTERNAL_INSTALL_LOCATION}/source/ui32_to_f128M.c
	${EXTERNAL_INSTALL_LOCATION}/source/ui64_to_f16.c
	${EXTERNAL_INSTALL_LOCATION}/source/ui64_to_f32.c
	${EXTERNAL_INSTALL_LOCATION}/source/ui64_to_f64.c
	${EXTERNAL_INSTALL_LOCATION}/source/ui64_to_extF80.c
	${EXTERNAL_INSTALL_LOCATION}/source/ui64_to_extF80M.c
	${EXTERNAL_INSTALL_LOCATION}/source/ui64_to_f128.c
	${EXTERNAL_INSTALL_LOCATION}/source/ui64_to_f128M.c
	${EXTERNAL_INSTALL_LOCATION}/source/i32_to_f16.c
	${EXTERNAL_INSTALL_LOCATION}/source/i32_to_f32.c
	${EXTERNAL_INSTALL_LOCATION}/source/i32_to_f64.c
	${EXTERNAL_INSTALL_LOCATION}/source/i32_to_extF80.c
	${EXTERNAL_INSTALL_LOCATION}/source/i32_to_extF80M.c
	${EXTERNAL_INSTALL_LOCATION}/source/i32_to_f128.c
	${EXTERNAL_INSTALL_LOCATION}/source/i32_to_f128M.c
	${EXTERNAL_INSTALL_LOCATION}/source/i64_to_f16.c
	${EXTERNAL_INSTALL_LOCATION}/source/i64_to_f32.c
	${EXTERNAL_INSTALL_LOCATION}/source/i64_to_f64.c
	${EXTERNAL_INSTALL_LOCATION}/source/i64_to_extF80.c
	${EXTERNAL_INSTALL_LOCATION}/source/i64_to_extF80M.c
	${EXTERNAL_INSTALL_LOCATION}/source/i64_to_f128.c
	${EXTERNAL_INSTALL_LOCATION}/source/i64_to_f128M.c
	${EXTERNAL_INSTALL_LOCATION}/source/f16_to_ui32.c
	${EXTERNAL_INSTALL_LOCATION}/source/f16_to_ui64.c
	${EXTERNAL_INSTALL_LOCATION}/source/f16_to_i32.c
	${EXTERNAL_INSTALL_LOCATION}/source/f16_to_i64.c
	${EXTERNAL_INSTALL_LOCATION}/source/f16_to_ui32_r_minMag.c
	${EXTERNAL_INSTALL_LOCATION}/source/f16_to_ui64_r_minMag.c
	${EXTERNAL_INSTALL_LOCATION}/source/f16_to_i32_r_minMag.c
	${EXTERNAL_INSTALL_LOCATION}/source/f16_to_i64_r_minMag.c
	${EXTERNAL_INSTALL_LOCATION}/source/f16_to_f32.c
	${EXTERNAL_INSTALL_LOCATION}/source/f16_to_f64.c
	${EXTERNAL_INSTALL_LOCATION}/source/f16_to_extF80.c
	${EXTERNAL_INSTALL_LOCATION}/source/f16_to_extF80M.c
	${EXTERNAL_INSTALL_LOCATION}/source/f16_to_f128.c
	${EXTERNAL_INSTALL_LOCATION}/source/f16_to_f128M.c
	${EXTERNAL_INSTALL_LOCATION}/source/f16_roundToInt.c
	${EXTERNAL_INSTALL_LOCATION}/source/f16_add.c
	${EXTERNAL_INSTALL_LOCATION}/source/f16_sub.c
	${EXTERNAL_INSTALL_LOCATION}/source/f16_mul.c
	${EXTERNAL_INSTALL_LOCATION}/source/f16_mulAdd.c
	${EXTERNAL_INSTALL_LOCATION}/source/f16_div.c
	${EXTERNAL_INSTALL_LOCATION}/source/f16_rem.c
	${EXTERNAL_INSTALL_LOCATION}/source/f16_sqrt.c
	${EXTERNAL_INSTALL_LOCATION}/source/f16_eq.c
	${EXTERNAL_INSTALL_LOCATION}/source/f16_le.c
	${EXTERNAL_INSTALL_LOCATION}/source/f16_lt.c
	${EXTERNAL_INSTALL_LOCATION}/source/f16_eq_signaling.c
	${EXTERNAL_INSTALL_LOCATION}/source/f16_le_quiet.c
	${EXTERNAL_INSTALL_LOCATION}/source/f16_lt_quiet.c
	${EXTERNAL_INSTALL_LOCATION}/source/f16_isSignalingNaN.c
	${EXTERNAL_INSTALL_LOCATION}/source/f32_to_ui32.c
	${EXTERNAL_INSTALL_LOCATION}/source/f32_to_ui64.c
	${EXTERNAL_INSTALL_LOCATION}/source/f32_to_i32.c
	${EXTERNAL_INSTALL_LOCATION}/source/f32_to_i64.c
	${EXTERNAL_INSTALL_LOCATION}/source/f32_to_ui32_r_minMag.c
	${EXTERNAL_INSTALL_LOCATION}/source/f32_to_ui64_r_minMag.c
	${EXTERNAL_INSTALL_LOCATION}/source/f32_to_i32_r_minMag.c
	${EXTERNAL_INSTALL_LOCATION}/source/f32_to_i64_r_minMag.c
	${EXTERNAL_INSTALL_LOCATION}/source/f32_to_f16.c
	${EXTERNAL_INSTALL_LOCATION}/source/f32_to_f64.c
	${EXTERNAL_INSTALL_LOCATION}/source/f32_to_extF80.c
	${EXTERNAL_INSTALL_LOCATION}/source/f32_to_extF80M.c
	${EXTERNAL_INSTALL_LOCATION}/source/f32_to_f128.c
	${EXTERNAL_INSTALL_LOCATION}/source/f32_to_f128M.c
	${EXTERNAL_INSTALL_LOCATION}/source/f32_roundToInt.c
	${EXTERNAL_INSTALL_LOCATION}/source/f32_add.c
	${EXTERNAL_INSTALL_LOCATION}/source/f32_sub.c
	${EXTERNAL_INSTALL_LOCATION}/source/f32_mul.c
	${EXTERNAL_INSTALL_LOCATION}/source/f32_mulAdd.c
	${EXTERNAL_INSTALL_LOCATION}/source/f32_div.c
	${EXTERNAL_INSTALL_LOCATION}/source/f32_rem.c
	${EXTERNAL_INSTALL_LOCATION}/source/f32_sqrt.c
	${EXTERNAL_INSTALL_LOCATION}/source/f32_eq.c
	${EXTERNAL_INSTALL_LOCATION}/source/f32_le.c
	${EXTERNAL_INSTALL_LOCATION}/source/f32_lt.c
	${EXTERNAL_INSTALL_LOCATION}/source/f32_eq_signaling.c
	${EXTERNAL_INSTALL_LOCATION}/source/f32_le_quiet.c
	${EXTERNAL_INSTALL_LOCATION}/source/f32_lt_quiet.c
	${EXTERNAL_INSTALL_LOCATION}/source/f32_isSignalingNaN.c
	${EXTERNAL_INSTALL_LOCATION}/source/f64_to_ui32.c
	${EXTERNAL_INSTALL_LOCATION}/source/f64_to_ui64.c
	${EXTERNAL_INSTALL_LOCATION}/source/f64_to_i32.c
	${EXTERNAL_INSTALL_LOCATION}/source/f64_to_i64.c
	${EXTERNAL_INSTALL_LOCATION}/source/f64_to_ui32_r_minMag.c
	${EXTERNAL_INSTALL_LOCATION}/source/f64_to_ui64_r_minMag.c
	${EXTERNAL_INSTALL_LOCATION}/source/f64_to_i32_r_minMag.c
	${EXTERNAL_INSTALL_LOCATION}/source/f64_to_i64_r_minMag.c
	${EXTERNAL_INSTALL_LOCATION}/source/f64_to_f16.c
	${EXTERNAL_INSTALL_LOCATION}/source/f64_to_f32.c
	${EXTERNAL_INSTALL_LOCATION}/source/f64_to_extF80.c
	${EXTERNAL_INSTALL_LOCATION}/source/f64_to_extF80M.c
	${EXTERNAL_INSTALL_LOCATION}/source/f64_to_f128.c
	${EXTERNAL_INSTALL_LOCATION}/source/f64_to_f128M.c
	${EXTERNAL_INSTALL_LOCATION}/source/f64_roundToInt.c
	${EXTERNAL_INSTALL_LOCATION}/source/f64_add.c
	${EXTERNAL_INSTALL_LOCATION}/source/f64_sub.c
	${EXTERNAL_INSTALL_LOCATION}/source/f64_mul.c
	${EXTERNAL_INSTALL_LOCATION}/source/f64_mulAdd.c
	${EXTERNAL_INSTALL_LOCATION}/source/f64_div.c
	${EXTERNAL_INSTALL_LOCATION}/source/f64_rem.c
	${EXTERNAL_INSTALL_LOCATION}/source/f64_sqrt.c
	${EXTERNAL_INSTALL_LOCATION}/source/f64_eq.c
	${EXTERNAL_INSTALL_LOCATION}/source/f64_le.c
	${EXTERNAL_INSTALL_LOCATION}/source/f64_lt.c
	${EXTERNAL_INSTALL_LOCATION}/source/f64_eq_signaling.c
	${EXTERNAL_INSTALL_LOCATION}/source/f64_le_quiet.c
	${EXTERNAL_INSTALL_LOCATION}/source/f64_lt_quiet.c
	${EXTERNAL_INSTALL_LOCATION}/source/f64_isSignalingNaN.c
	${EXTERNAL_INSTALL_LOCATION}/source/extF80_to_ui32.c
	${EXTERNAL_INSTALL_LOCATION}/source/extF80_to_ui64.c
	${EXTERNAL_INSTALL_LOCATION}/source/extF80_to_i32.c
	${EXTERNAL_INSTALL_LOCATION}/source/extF80_to_i64.c
	${EXTERNAL_INSTALL_LOCATION}/source/extF80_to_ui32_r_minMag.c
	${EXTERNAL_INSTALL_LOCATION}/source/extF80_to_ui64_r_minMag.c
	${EXTERNAL_INSTALL_LOCATION}/source/extF80_to_i32_r_minMag.c
	${EXTERNAL_INSTALL_LOCATION}/source/extF80_to_i64_r_minMag.c
	${EXTERNAL_INSTALL_LOCATION}/source/extF80_to_f16.c
	${EXTERNAL_INSTALL_LOCATION}/source/extF80_to_f32.c
	${EXTERNAL_INSTALL_LOCATION}/source/extF80_to_f64.c
	${EXTERNAL_INSTALL_LOCATION}/source/extF80_to_f128.c
	${EXTERNAL_INSTALL_LOCATION}/source/extF80_roundToInt.c
	${EXTERNAL_INSTALL_LOCATION}/source/extF80_add.c
	${EXTERNAL_INSTALL_LOCATION}/source/extF80_sub.c
	${EXTERNAL_INSTALL_LOCATION}/source/extF80_mul.c
	${EXTERNAL_INSTALL_LOCATION}/source/extF80_div.c
	${EXTERNAL_INSTALL_LOCATION}/source/extF80_rem.c
	${EXTERNAL_INSTALL_LOCATION}/source/extF80_sqrt.c
	${EXTERNAL_INSTALL_LOCATION}/source/extF80_eq.c
	${EXTERNAL_INSTALL_LOCATION}/source/extF80_le.c
	${EXTERNAL_INSTALL_LOCATION}/source/extF80_lt.c
	${EXTERNAL_INSTALL_LOCATION}/source/extF80_eq_signaling.c
	${EXTERNAL_INSTALL_LOCATION}/source/extF80_le_quiet.c
	${EXTERNAL_INSTALL_LOCATION}/source/extF80_lt_quiet.c
	${EXTERNAL_INSTALL_LOCATION}/source/extF80_isSignalingNaN.c
	${EXTERNAL_INSTALL_LOCATION}/source/extF80M_to_ui32.c
	${EXTERNAL_INSTALL_LOCATION}/source/extF80M_to_ui64.c
	${EXTERNAL_INSTALL_LOCATION}/source/extF80M_to_i32.c
	${EXTERNAL_INSTALL_LOCATION}/source/extF80M_to_i64.c
	${EXTERNAL_INSTALL_LOCATION}/source/extF80M_to_ui32_r_minMag.c
	${EXTERNAL_INSTALL_LOCATION}/source/extF80M_to_ui64_r_minMag.c
	${EXTERNAL_INSTALL_LOCATION}/source/extF80M_to_i32_r_minMag.c
	${EXTERNAL_INSTALL_LOCATION}/source/extF80M_to_i64_r_minMag.c
	${EXTERNAL_INSTALL_LOCATION}/source/extF80M_to_f16.c
	${EXTERNAL_INSTALL_LOCATION}/source/extF80M_to_f32.c
	${EXTERNAL_INSTALL_LOCATION}/source/extF80M_to_f64.c
	${EXTERNAL_INSTALL_LOCATION}/source/extF80M_to_f128M.c
	${EXTERNAL_INSTALL_LOCATION}/source/extF80M_roundToInt.c
	${EXTERNAL_INSTALL_LOCATION}/source/extF80M_add.c
	${EXTERNAL_INSTALL_LOCATION}/source/extF80M_sub.c
	${EXTERNAL_INSTALL_LOCATION}/source/extF80M_mul.c
	${EXTERNAL_INSTALL_LOCATION}/source/extF80M_div.c
	${EXTERNAL_INSTALL_LOCATION}/source/extF80M_rem.c
	${EXTERNAL_INSTALL_LOCATION}/source/extF80M_sqrt.c
	${EXTERNAL_INSTALL_LOCATION}/source/extF80M_eq.c
	${EXTERNAL_INSTALL_LOCATION}/source/extF80M_le.c
	${EXTERNAL_INSTALL_LOCATION}/source/extF80M_lt.c
	${EXTERNAL_INSTALL_LOCATION}/source/extF80M_eq_signaling.c
	${EXTERNAL_INSTALL_LOCATION}/source/extF80M_le_quiet.c
	${EXTERNAL_INSTALL_LOCATION}/source/extF80M_lt_quiet.c
	${EXTERNAL_INSTALL_LOCATION}/source/f128_to_ui32.c
	${EXTERNAL_INSTALL_LOCATION}/source/f128_to_ui64.c
	${EXTERNAL_INSTALL_LOCATION}/source/f128_to_i32.c
	${EXTERNAL_INSTALL_LOCATION}/source/f128_to_i64.c
	${EXTERNAL_INSTALL_LOCATION}/source/f128_to_ui32_r_minMag.c
	${EXTERNAL_INSTALL_LOCATION}/source/f128_to_ui64_r_minMag.c
	${EXTERNAL_INSTALL_LOCATION}/source/f128_to_i32_r_minMag.c
	${EXTERNAL_INSTALL_LOCATION}/source/f128_to_i64_r_minMag.c
	${EXTERNAL_INSTALL_LOCATION}/source/f128_to_f16.c
	${EXTERNAL_INSTALL_LOCATION}/source/f128_to_f32.c
	${EXTERNAL_INSTALL_LOCATION}/source/f128_to_extF80.c
	${EXTERNAL_INSTALL_LOCATION}/source/f128_to_f64.c
	${EXTERNAL_INSTALL_LOCATION}/source/f128_roundToInt.c
	${EXTERNAL_INSTALL_LOCATION}/source/f128_add.c
	${EXTERNAL_INSTALL_LOCATION}/source/f128_sub.c
	${EXTERNAL_INSTALL_LOCATION}/source/f128_mul.c
	${EXTERNAL_INSTALL_LOCATION}/source/f128_mulAdd.c
	${EXTERNAL_INSTALL_LOCATION}/source/f128_div.c
	${EXTERNAL_INSTALL_LOCATION}/source/f128_rem.c
	${EXTERNAL_INSTALL_LOCATION}/source/f128_sqrt.c
	${EXTERNAL_INSTALL_LOCATION}/source/f128_eq.c
	${EXTERNAL_INSTALL_LOCATION}/source/f128_le.c
	${EXTERNAL_INSTALL_LOCATION}/source/f128_lt.c
	${EXTERNAL_INSTALL_LOCATION}/source/f128_eq_signaling.c
	${EXTERNAL_INSTALL_LOCATION}/source/f128_le_quiet.c
	${EXTERNAL_INSTALL_LOCATION}/source/f128_lt_quiet.c
	${EXTERNAL_INSTALL_LOCATION}/source/f128_isSignalingNaN.c
	${EXTERNAL_INSTALL_LOCATION}/source/f128M_to_ui32.c
	${EXTERNAL_INSTALL_LOCATION}/source/f128M_to_ui64.c
	${EXTERNAL_INSTALL_LOCATION}/source/f128M_to_i32.c
	${EXTERNAL_INSTALL_LOCATION}/source/f128M_to_i64.c
	${EXTERNAL_INSTALL_LOCATION}/source/f128M_to_ui32_r_minMag.c
	${EXTERNAL_INSTALL_LOCATION}/source/f128M_to_ui64_r_minMag.c
	${EXTERNAL_INSTALL_LOCATION}/source/f128M_to_i32_r_minMag.c
	${EXTERNAL_INSTALL_LOCATION}/source/f128M_to_i64_r_minMag.c
	${EXTERNAL_INSTALL_LOCATION}/source/f128M_to_f16.c
	${EXTERNAL_INSTALL_LOCATION}/source/f128M_to_f32.c
	${EXTERNAL_INSTALL_LOCATION}/source/f128M_to_extF80M.c
	${EXTERNAL_INSTALL_LOCATION}/source/f128M_to_f64.c
	${EXTERNAL_INSTALL_LOCATION}/source/f128M_roundToInt.c
	${EXTERNAL_INSTALL_LOCATION}/source/f128M_add.c
	${EXTERNAL_INSTALL_LOCATION}/source/f128M_sub.c
	${EXTERNAL_INSTALL_LOCATION}/source/f128M_mul.c
	${EXTERNAL_INSTALL_LOCATION}/source/f128M_mulAdd.c
	${EXTERNAL_INSTALL_LOCATION}/source/f128M_div.c
	${EXTERNAL_INSTALL_LOCATION}/source/f128M_rem.c
	${EXTERNAL_INSTALL_LOCATION}/source/f128M_sqrt.c
	${EXTERNAL_INSTALL_LOCATION}/source/f128M_eq.c
	${EXTERNAL_INSTALL_LOCATION}/source/f128M_le.c
	${EXTERNAL_INSTALL_LOCATION}/source/f128M_lt.c
	${EXTERNAL_INSTALL_LOCATION}/source/f128M_eq_signaling.c
	${EXTERNAL_INSTALL_LOCATION}/source/f128M_le_quiet.c
	${EXTERNAL_INSTALL_LOCATION}/source/f128M_lt_quiet.c
)

SET(BPROJECT_NAME berkeley-${PROJECT_NAME})
ADD_LIBRARY(${BPROJECT_NAME} STATIC
    ${SRCS_PRIMITIVES}
    ${SRCS_SPECIALIZE}
    ${SRCS_OTHERS}
)

IF(WIN32)
	SET(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS ON)
ELSE()
	TARGET_COMPILE_OPTIONS(${BPROJECT_NAME} PRIVATE -O3)
ENDIF()

TARGET_INCLUDE_DIRECTORIES(${BPROJECT_NAME} PUBLIC
	${EXTERNAL_INSTALL_LOCATION}
	${EXTERNAL_INSTALL_LOCATION}/source/${SPECIALIZE}
	${EXTERNAL_INSTALL_LOCATION}/${INC}
	${EXTERNAL_INSTALL_LOCATION}/build/${PLATFORM_N}
)
TARGET_COMPILE_DEFINITIONS(${BPROJECT_NAME} PUBLIC
	SOFTFLOAT_FAST_INT64
	${SOFTFLOAT_OPTS}
	INLINE=inline
)
SET_PROPERTY(TARGET ${BPROJECT_NAME} PROPERTY POSITION_INDEPENDENT_CODE ON)

##################### SOFTFLOAT JIT LIBRARY #####################

ADD_LIBRARY(${PROJECT_NAME} SHARED
	fp_functions.cpp
)

TARGET_LINK_LIBRARIES(${PROJECT_NAME} PUBLIC ${BPROJECT_NAME})

add_custom_command(
  TARGET ${PROJECT_NAME} POST_BUILD VERBATIM
  COMMAND ${CMAKE_COMMAND} -E make_directory ${CMAKE_BINARY_DIR}/include/jit/etiss/jit/
  COMMAND ${CMAKE_COMMAND} -E copy "$<TARGET_FILE:${PROJECT_NAME}>" ${CMAKE_BINARY_DIR}/include/jit/etiss/jit/
)

ENDIF()

INSTALL(FILES
    libsoftfloat.h
    DESTINATION include/jit/etiss/jit
)
InstallJitLib(${PROJECT_NAME})
